--- a/manuscript/page-7/body.html
+++ b/manuscript/page-7/body.html
@@ -1,24 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-
-        <p>
-          She is driving, we are chatting and so happy to see each other. But something was real uncomfortable inside me. One drives on the right-hand side of the road here. Speed signs are in miles, there are STOP signs on few roads and you can't even turn on green light sometimes.
-          Suddenly, we hear a high volume siren coming long behind from our behind. It is an ambulance and everybody just turned their vehicles towards the side of the road. My wife told me that it was yielding the right-of-way to emergency vehicle, so it can pass and go without any interupptions on its direction.
-        </p>
-
-        <p>
-          Those signs, lights and siren are making me more curious to drive here. But I must be cautious. My wife told me that I need to take a written test first and then a driving test on the road.
-          I am like driving test is fine as I have enough experience, but what is this written test. She asked me to check DMV website i.e. Department of Motor Vehicles.
-        </p>
-
-        <p>
-          Oh gosh, now I have to give 2 tests for getting my driving license here. <strong> Ain't that funny? </strong>
-        </p>
-
-        <p>
-          I checked DMV website next day. They have 40 pages pdf...
-          I feel like I'm turning 16.
-        </p>
-
+    <h1> Hello world! </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
